--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
     "gh-pages": "^6.0.0",
     "tailwindcss": "^3.3.2"
   },
-  "homepage": "https://chrischang5.github.io/chrischang5.github.io"
+  "homepage": "https://chrischang5.github.io/portfolio/"
 }
